updated base url in conf.ts

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
         ],
         "types": [
             "node",
+            "@wdio/types",
             "@wdio/globals/types",
             "expect-webdriverio",
             "@wdio/cucumber-framework"
