--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "devDependencies": {
     "@wdio/cli": "^9.0.7",
     "@wdio/cucumber-framework": "^9.0.6",
-    "@wdio/local-runner": "^9.0.7"
+    "@wdio/local-runner": "^9.0.7",
+    "@wdio/types": "^9.0.4"
   },
   "scripts": {
     "wdio": "wdio run ./wdio.conf.ts"
