--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
             "node",
             "@wdio/globals/types",
             "expect-webdriverio",
-            "@wdio/cucumber-framework"
+            "@wdio/cucumber-framework",
         ],
         "skipLibCheck": true,
         "noEmit": true,
