--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,7 @@
         "noFallthroughCasesInSwitch": true
     },
     "include": [
-        "test",
+        "features",
         "wdio.conf.ts"
     ]
 }
