--- a/.github/workflows/github-workflow.yml
+++ b/.github/workflows/github-workflow.yml
@@ -1,6 +1,9 @@
 name: GitHub Actions Demo
 run-name: running test on GitHub image
-on: [push]
+on: 
+  push:
+    branches: 
+     - singhjyoti010
 jobs:
   Explore-GitHub-Actions:
     runs-on: windows-latest
