--- a/package.json
+++ b/package.json
@@ -10,6 +10,6 @@
   },
   "scripts": {
     "wdio": "wdio run ./wdio.conf.ts",
-    "gactions": "wdio run ./wdio.gitactionsBase-conf.ts"
+    "gactions": "wdio run ./wdio-github.conf.ts"
   }
 }
